--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,7 @@
 fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
+requests>=2.25.0
+xmltodict>=0.12.0
+python-magic>=0.4.0
+python-magic-bin>=0.4.0
